# pop_api

./: .gitignore  Dockerfile-django  django-entrypoint.sh  django-service-envoy.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  todo.org
dummy_data/: employees.csv  fixture_maker.py  machines.csv  pop_fixture.json  pops.csv
popapi/api/: settings.py
tests/: test_popapi.py
triton/: .coverage  db.sqlite3  manage.py
triton/api/: models.py  serializers.py  tests.py  urls.py  views.py
triton/api/migrations/: 0001_initial.py
triton/triton/: settings.py  urls.py  wsgi.py
