[tool.poetry]
name = "popapi"
version = "0.1.0"
description = "An api for monitoring pop production."
authors = ["MTempleman <huntertempleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"
gunicorn = "^19.9"
django-cors-headers = "^3.0"
model_mommy = "^1.6"
coverage = "^4.5"
djangorestframework_simplejwt = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
